<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#e84548">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="15dp"
            android:background="@drawable/back_arrow_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/back_arrow"
            android:text="Product Info"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="#fff" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:paddingBottom="10dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_product_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerInside"
            android:src="@drawable/product_lg_type" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView

                android:id="@+id/tv_product_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="15dp"
                android:padding="10dp"
                android:text="@string/name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="#000" />

            <ImageView
                android:id="@+id/add_to_fav"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="21dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/ic_favorite_border_black_24dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:weightSum="3">

                    <ImageView
                        android:id="@+id/store_img1"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight=".7"
                        android:contentDescription="@string/pyatmmall"
                        android:src="@drawable/flipkart" />

                    <TextView
                        android:id="@+id/product_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        android:gravity="center"
                        android:text="@string/price"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="#000" />

                    <Button
                        android:id="@+id/goto_store1"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="#039BE5"
                        android:padding="5dp"
                        android:src="@drawable/paytm"
                        android:text="@string/go_to_store"
                        android:textColor="#fff" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:weightSum="3">

                    <ImageView
                        android:id="@+id/store_img2"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight=".7"
                        android:contentDescription="@string/pyatmmall"
                        android:src="@drawable/amazon" />

                    <TextView
                        android:id="@+id/product_price2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        android:gravity="center"
                        android:text="@string/price"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="#000" />

                    <Button
                        android:id="@+id/goto_store2"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="#039BE5"
                        android:padding="5dp"
                        android:src="@drawable/paytm"
                        android:text="@string/go_to_store"
                        android:textColor="#fff" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:weightSum="3">

                    <ImageView
                        android:id="@+id/store_img3"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight=".7"
                        android:contentDescription="@string/pyatmmall"
                        android:src="@drawable/paytm" />

                    <TextView
                        android:id="@+id/product_price3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.3"
                        android:gravity="center"
                        android:text="@string/price"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="#000" />

                    <Button
                        android:id="@+id/goto_store3"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="#039BE5"
                        android:padding="5dp"
                        android:src="@drawable/paytm"
                        android:text="@string/go_to_store"
                        android:textColor="#fff" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:layout_alignParentBottom="true"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/home_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Home"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/scan_now_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_scanner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/scan_now"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/history_icon_btn_sn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_history_red_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="History"
                android:textColor="#000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fav_icon_btn_sn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/fav_icon_red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Favorites"
                android:textColor="#000" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>